  (Antal Spector-Zabusky, review by Gabriel Scherer)

- #11297: Report "unclosed" error when "done" is missing in a "do .. done"
  construct.
  (Nicolás Ojeda Bär)

- #11457: Remove old polymorphic variant syntax.
  (Stefan Muenzel, review by Gabriel Scherer and Jacques Garrigue)

* #11565: Enable -strict-formats by default.
  (Nicolás Ojeda Bär, review by David Allsopp)

### Runtime system:

### Code generation and optimizations:

- #8998, #11321, #11430: change mangling of OCaml long identifiers
  from `camlModule__name_NNN` to `camlModule.name_NNN`.  The previous
  mangling schema, using `__`, was ambiguous.
  (Xavier Leroy, report by sliquister and Michael Bacarella,
   review by Gabriel Scherer)

- #10834: The -safer-matching option disables type-based optimizations of
  pattern-matching compilation. This allows to produce a match failure if
  a pattern-matching was wrongly assumed to be exhaustive. Since the
  exhaustiveness check for GADTs has had bugs in the past, it may be
  useful if you need extra security with GADTs.
  (Jacques Garrigue, review by Gabriel Scherer)

- #11102: Speed up register allocation by permanently spilling registers
  (Stephen Dolan, review by Xavier Leroy)

### Standard library:

- #11410: Add Set.to_list, Map.to_list, Map.of_list, Map.add_to_list,
  (Daniel Bünzli, review by Nicolás Ojeda Bär and Gabriel Scherer)

- #11128: Add In_channel.isatty, Out_channel.isatty.
  (Nicolás Ojeda Bär, review by Gabriel Scherer and Florian Angeletti)

- #10859: Add `Format.pp_print_iter` and `Format.pp_print_array`.
  (Léo Andrès and Daniel Bünzli, review by David Allsopp and Hugo Heuzard)

- #10789: Add `Stack.drop`
  (Léo Andrès, review by Gabriel Scherer)

* #10899: Change Stdlib.nan from signaling NaN to quiet NaN.
  (Greta Yorsh, review by Xavier Leroy, Guillaume Melquiond and
  Gabriel Scherer)

- #11246: Add "hash" and "seeded_hash" functions to Bool, Int, Char, Float,
  Int32, Int64, and Nativeint.