@@ -185,6 +185,8 @@ again:
   mem = mmap(0, alloc_sz, reserve_only ? PROT_NONE : (PROT_READ | PROT_WRITE),
              MAP_PRIVATE | MAP_ANONYMOUS, -1, 0);
 #endif
+  caml_gc_message(0x1000, "mmap %" ARCH_INT64_PRINTF_FORMAT "d"
+                          " bytes at %p for heaps\n", alloc_sz, mem);
   if (mem == MAP_FAILED) {
     return 0;
   }
@@ -198,6 +200,7 @@ again:
      release the entire block of memory. For Windows, repeat the call but this
      time specify the address. */
   VirtualFree(mem, 0, MEM_RELEASE);
+  caml_gc_message(0x1000, "munmap %lld bytes at %p for heaps\n", alloc_sz, mem);
   mem = VirtualAlloc((void*)aligned_start,
                      aligned_end - aligned_start,
                      MEM_RESERVE | (reserve_only ? 0 : MEM_COMMIT),
@@ -215,8 +218,12 @@ again:
       return 0;
     }
   }
+  caml_gc_message(0x1000, "mmap %lld bytes at %p for heaps\n", alloc_sz, mem);
   CAMLassert(mem == (void*)aligned_start);
 #else
+  caml_gc_message(0x1000, "munmap %" ARCH_INT64_PRINTF_FORMAT "d"
+                          " bytes at %p for heaps\n",
+                          aligned_start - base, (void*)base);
   munmap((void*)base, aligned_start - base);
   munmap((void*)aligned_end, (base + alloc_sz) - aligned_end);
 #endif
@@ -243,6 +250,8 @@ static void* map_fixed(void* mem, uintnat size, int prot)
 void* caml_mem_commit(void* mem, uintnat size)
 {
   CAML_ASSERT_SIZE_IS_PAGE_ALIGNED(size);
+  caml_gc_message(0x1000, "commit %" ARCH_INT64_PRINTF_FORMAT "d"
+                          " bytes at %p for heaps\n", size, mem);
 #ifdef _WIN32
   return VirtualAlloc(mem, size, MEM_COMMIT, PAGE_READWRITE);
 #else
@@ -261,6 +270,8 @@ void* caml_mem_commit(void* mem, uintnat size)
 
 void caml_mem_decommit(void* mem, uintnat size)
 {
+  caml_gc_message(0x1000, "decommit %" ARCH_INT64_PRINTF_FORMAT "d"
+                          " bytes at %p for heaps\n", size, mem);
 #ifdef _WIN32
   /* VirtualFree can't decommit zero bytes */
   if (size)
@@ -277,6 +288,8 @@ void caml_mem_unmap(void* mem, uintnat size)
   CAMLassert(caml_lf_skiplist_find(&mmap_blocks, (uintnat)mem, &data) != 0);
   CAMLassert(data == size);
 #endif
+  caml_gc_message(0x1000, "munmap %" ARCH_INT64_PRINTF_FORMAT "d"
+                          " bytes at %p for heaps\n", size, mem);
 #ifdef _WIN32
   if (!VirtualFree(mem, 0, MEM_RELEASE))
     CAMLassert(0);
